# clan-wars-payouts

./: .gitignore  Makefile  README.md  dev.sh  pyproject.toml
app/: config.py  db.py  deps.py  main.py  models.py  wargaming.py
app/static/: app.js  index.html  payouts.css  style.css  success.html
app/templates/: about.html  admin.html  home.html  index.html  layout.html  payouts.html  slow_down.html
