[project]
name = "clan-wars-payouts"
version = "0.1.0"
description = "WoT clan wars attendance and weekly gold/bonds payout tracker"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]",
]
